--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    implementation 'net.logicsquad:nanocaptcha:1.3'
 }
 
 jar {
