--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
     implementation 'org.json:json:20220320'
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -122,4 +122,8 @@ task deployTomcat (type: CargoRedeployRemote) {
     username = project.findProperty('tomcat.manager.username') ?: ""
     password = project.findProperty('tomcat.manager.password') ?: ""
     deployables = [new Deployable(files: project.files([war.archiveFile]), context: "${project.'project.name'}/v${project.version}")]
+}
+
+test {
+    useJUnitPlatform()
 }
