--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 plugins {
     id 'java'
     id 'war'
+    id('cz.habarta.typescript-generator') version '3.2.1263'
 }
 
 apply plugin: 'com.bmuschko.cargo-base'
@@ -122,6 +123,18 @@ task deployTomcat (type: CargoRedeployRemote) {
     username = project.findProperty('tomcat.manager.username') ?: ""
     password = project.findProperty('tomcat.manager.password') ?: ""
     deployables = [new Deployable(files: project.files([war.archiveFile]), context: "${project.'project.name'}/v${project.version}")]
+}
+
+generateTypeScript {
+    jsonLibrary = 'jackson2'
+    classes = ['jhi.gridscore.server.pojo.Trial']
+    outputKind = 'module'
+    outputFile = 'gridscore.ts'
+    outputFileType = 'implementationFile'
+    generateConstructors = true
+    mapClasses = 'asClasses'
+    mapEnum = 'asEnum'
+    stringQuotes = 'singleQuotes'
 }
 
 test {
