--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 
     implementation 'org.apache.poi:poi-ooxml:5.2.2'
 
+    implementation 'org.flywaydb:flyway-core:6.5.7'
+
     implementation 'javax.media:jai_core:1.1.3'
     implementation 'org.geotools:gt-shapefile:22.2'
 
