--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ compileJava.options.encoding = 'UTF-8'
 sourceCompatibility = 11
 
 group 'uk.ac.hutton.ics.gridscore'
-version '3.1.1'
+version '3.2.0'
 
 repositories {
     maven {
@@ -53,6 +53,7 @@ dependencies {
     implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.1.1'
     implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
     implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.1'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.1'
 
     implementation 'org.apache.poi:poi-ooxml:5.2.2'
 
