--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,10 @@ plugins {
 
 apply plugin: 'com.bmuschko.cargo-base'
 compileJava.options.encoding = 'UTF-8'
-sourceCompatibility = 11
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+}
 
 group 'uk.ac.hutton.ics.gridscore'
 version '3.2.0'
@@ -50,10 +53,10 @@ dependencies {
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
 
     providedCompile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
-    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.1.1'
-    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
-    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.1'
-    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.1'
+    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.1.3'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.3'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.3'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.3'
 
     implementation 'org.apache.poi:poi-ooxml:5.2.2'
 
@@ -62,8 +65,8 @@ dependencies {
     implementation 'javax.media:jai_core:1.1.3'
     implementation 'org.geotools:gt-shapefile:22.2'
 
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
     implementation 'net.logicsquad:nanocaptcha:1.3'
 }
@@ -112,7 +115,7 @@ war {
 task codegen (type: JavaExec) {
     group = 'Execution'
     classpath = sourceSets.main.runtimeClasspath
-    main = 'org.jooq.codegen.GenerationTool'
+    mainClass = 'org.jooq.codegen.GenerationTool'
     args 'jooq.xml'
 }
 
