--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ java {
 }
 
 group 'uk.ac.hutton.ics.gridscore'
-version '3.4.1'
+version '3.4.2'
 
 repositories {
     maven {
@@ -38,14 +38,14 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
-    implementation 'org.json:json:20220320'
+    implementation 'org.json:json:20250517'
     implementation 'com.google.code.gson:gson:2.9.0'
 
-    implementation 'mysql:mysql-connector-java:8.0.29'
+    implementation 'com.mysql:mysql-connector-j:8.2.0'
     implementation 'org.jooq:jooq:3.16.18'
     implementation 'org.jooq:jooq-codegen:3.16.18'
 
-    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'commons-io:commons-io:2.19.0'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.activation:activation:1.1.1'
@@ -53,12 +53,12 @@ dependencies {
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
 
     providedCompile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
-    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.1.3'
-    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.3'
-    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.3'
-    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.3'
+    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.1.10'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.10'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.10'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.10'
 
-    implementation 'org.apache.poi:poi-ooxml:5.2.2'
+    implementation 'org.apache.poi:poi-ooxml:5.4.1'
 
     implementation 'org.flywaydb:flyway-core:6.5.7'
 
