--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ java {
 }
 
 group 'uk.ac.hutton.ics.gridscore'
-version '3.4.2'
+version '3.4.3'
 
 repositories {
     maven {
@@ -42,10 +42,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
 
     implementation 'com.mysql:mysql-connector-j:8.2.0'
-    implementation 'org.jooq:jooq:3.16.18'
-    implementation 'org.jooq:jooq-codegen:3.16.18'
+    implementation 'org.jooq:jooq:3.20.5'
+    implementation 'org.jooq:jooq-codegen:3.20.5'
 
-    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'commons-io:commons-io:2.20.0'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.activation:activation:1.1.1'
@@ -58,9 +58,10 @@ dependencies {
     implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.3'
     implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.3'
 
-    implementation 'org.apache.poi:poi-ooxml:5.2.2'
+    implementation 'org.apache.poi:poi-ooxml:5.4.1'
 
-    implementation 'org.flywaydb:flyway-core:6.5.7'
+    implementation 'org.flywaydb:flyway-core:10.22.0'
+    implementation 'org.flywaydb:flyway-mysql:10.22.0'
 
     implementation 'javax.media:jai_core:1.1.3'
     implementation 'org.geotools:gt-shapefile:22.2'
@@ -68,7 +69,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-    implementation 'net.logicsquad:nanocaptcha:1.3'
+    implementation 'net.logicsquad:nanocaptcha:2.1'
 }
 
 jar {
